[package]
# The github workflows depend on this name not changing
# if you want to change it, make sure to fix .github/workflows/build.yml
name = "particle_decoder"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = "0.26"
egui_extras = "0.26.0"
geo = "0.32.0"
geo-types = "0.7.18"
image = "0.25.9"
rand = "0.9.2"
rayon = "1.11.0"
rfd = "0.17.2"
