[package]
name = "particle_decoder"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.44"
dotenvy = "0.15.7"
eframe = "0.26"
egui_extras = "0.26.0"
geo = "0.32.0"
geo-types = "0.7.18"
image = "0.25.9"
rand = "0.9.2"
rayon = "1.11.0"
rfd = "0.17.2"
serde = "1.0.228"
serde_json = "1.0.149"
